objects/APTS_Terms_and_Conditions_Admin__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Location</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Terms and Conditions Admin</relationshipLabel>
        <relationshipName>Terms_and_Conditions_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <formula>APTS_ABB_Location__r.BALId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code_Used_For__c</fullName>
        <label>Code Used For</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoterm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mode of Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalty Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP Sales Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Incoterms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validity Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Max</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Unit Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Validity_Days__c</fullName>
        <label>Default Validity Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Global_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Global__c</fullName>
        <label>Global</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Code__c</fullName>
        <label>Local Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <label>Locale</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Master_Picklist_T_C__c</fullName>
        <label>Master Picklist T&amp;C</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Terms and Conditions Admin</relationshipLabel>
        <relationshipName>Terms_and_Conditions_Admin</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_TnC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term and Condition Admin</label>
        <referenceTo>APTS_Terms_and_Conditions_Admin__c</referenceTo>
        <relationshipLabel>Terms and Conditions Admin</relationshipLabel>
        <relationshipName>Terms_and_Conditions_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Term and Condition Admin</label>
    <listViews>
        <fullName>APTS_Payment_Terms</fullName>
        <columns>NAME</columns>
        <columns>APTS_Master_Picklist_T_C__c</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_Business_Unit__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Global__c</columns>
        <columns>APTS_Is_Available__c</columns>
        <columns>APTS_Is_Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Master_Picklist_T_C__c</columns>
        <columns>APTS_Global__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Business_Unit__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>APTS_Product_Group__c</columns>
        <columns>APTS_Is_Available__c</columns>
        <columns>APTS_Is_Default__c</columns>
        <columns>APTS_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_T_C</fullName>
        <columns>NAME</columns>
        <columns>APTS_Activity__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_Business_Unit__c</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Code__c</columns>
        <columns>APTS_Code_Used_For__c</columns>
        <columns>APTS_Global_T_C__c</columns>
        <columns>APTS_Master_Picklist_T_C__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_Locale__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Global_T_C__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Global T&amp;C</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TCA-{0000000000}</displayFormat>
        <label>Terms and Conditions Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions Admin</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>